2009-04-18  Chris Toshok  <toshok@ximian.com>

	* Storyboard.cs: reorder things a bit to group
	methods/properties/etc together (and put internal things at the
	end).  Also, implement SeekAlignedToLastTick.

	* Timeline.cs: don't use Helper.ObjectFromIntPtr, use
	NativeDependencyObjectHelper.FromIntPtr, and don't cache the
	manual target.  get and set it using the pinvoke.

2009-04-05  Chris Toshok  <toshok@ximian.com>

	* EasingFunctionBase.cs (Initialize): call
	EasingFunctionBase::SetEasingFunction, passing a delegate to our
	Ease method.

2009-04-04  Chris Toshok  <toshok@ximian.com>

	* EasingColorKeyFrame.cs, EasingDoubleKeyFrame,
	EasingPointKeyFrame: add the easing keyframe types.

2009-04-03  Chris Toshok  <toshok@ximian.com>

	* BackEase.cs, BounceEase.cs, CircleEase.cs, CubicEase.cs,
	EasingFunctionBase.cs, EasingMode.cs, ElasticEase.cs,
	ExponentialEase.cs, IEasingFunction.cs, PowerEase.cs,
	QuadraticEase.cs, QuarticEase.cs, QuinticEase.cs, SineEase.cs: add
	the easing types.

2009-03-12  Geoff Norton  <gnorton@novell.com>

	* Storyboard.cs: Implement SkipToFill

2009-03-06  Andreia Gaita  <avidigal@novell.com>

	* Timeline.cs: Switch to using ObjectFromIntPtr to lookup objects.

2009-03-06  Alan McGovern  <amcgovern@novell.com>

	* Timeline.cs:
	* Storyboard.cs: If the PropertyPath supplied to the
	  TargetPropertyProperty is a DependencyProperty, we need a
	  special method to retrieve it. Normally PropertyPaths which
	  are instantiated with a DependencyProperty are returned as
	  'null' from native. Also add method for getting the manual
	  target.

2009-03-06  Alan McGovern  <amcgovern@novell.com>

	* ChangeLog:
	* Timeline.cs:
	* Storyboard.cs: Revert - I didn't mean to commit that yet.
	  It's not complete.

2009-03-05  Alan McGovern  <amcgovern@novell.com>

	* Storyboard.cs: Add a bunch of additional tests for
	  PropertyPath. Ensure that the correct exceptions are thrown
	  when a propertypath is used on a storyboard.
